# transpiler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_input.py  update_imports.py
.github/workflows/: ci.yml  release.yml
backend/c/: codegen.py
backend/go/: codegen.py
backend/java/: codegen.py
backend/javascript/: codegen.py
backend/python/: codegen.py
backend/rust/: codegen.py
cli/: main.py
frontend/c/: parser.py
frontend/go/: parser.py
frontend/java/: parser.py
frontend/javascript/: parser.py
frontend/python/: parser.py
frontend/rust/: parser.py
ir/: nodes.py  types.py
passes/: type_inference.py
runtime/c/: transpiler_runtime.h
src/transpiler/backend/c/: codegen.py
src/transpiler/backend/go/: codegen.py
src/transpiler/backend/java/: codegen.py
src/transpiler/backend/javascript/: codegen.py
src/transpiler/backend/python/: codegen.py
src/transpiler/backend/rust/: codegen.py
src/transpiler/cli/: main.py
src/transpiler/frontend/c/: parser.py
src/transpiler/frontend/go/: parser.py
src/transpiler/frontend/java/: parser.py
src/transpiler/frontend/javascript/: parser.py
src/transpiler/frontend/python/: parser.py
src/transpiler/frontend/rust/: parser.py
src/transpiler/ir/: nodes.py  types.py
src/transpiler/passes/: type_inference.py
tests/: test_backends.py  test_c.py  test_cli.py  test_deep_coverage.py  test_edge_cases.py  test_frontends.py  test_go.py  test_java.py  test_js.py  test_python.py  test_rust.py  test_type_inference.py
