[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transpiler"
version = "0.1.0"
description = "Multi-Language Transpiler Framework"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-c>=0.21.0,<0.22.0",
    "tree-sitter-go>=0.21.0,<0.22.0",
    "tree-sitter-java>=0.21.0,<0.22.0",
    "tree-sitter-javascript>=0.21.0,<0.22.0",
    "tree-sitter-rust>=0.21.0,<0.22.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
    "build>=1.0"
]

[project.scripts]
transpiler = "transpiler.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "W"]
lint.ignore = [
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
    "E701", # multiple-statements-on-one-line-colon
    "E501", # line-too-long
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
