[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transpiler"
version = "0.1.0"
description = "Multi-Language Transpiler Framework"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-c",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-rust"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0,<24.4",
    "mypy>=1.0",
    "build>=1.0"
]

[project.scripts]
transpiler = "transpiler.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "W"]
lint.ignore = [
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
    "E701", # multiple-statements-on-one-line-colon
    "E501", # line-too-long
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
